--- a/frontend/templates/_base.html
+++ b/frontend/templates/_base.html
@@ -15,7 +15,7 @@
     {% endblock %}
 
     <link rel="stylesheet" href="{{ url_for('static', path='/css/definitions.css') }}">
-    {% block styles %}
+    {% block links %}
     {% endblock %}
 </head>
 
