--- a/frontend/templates/demo.html
+++ b/frontend/templates/demo.html
@@ -1,7 +1,7 @@
 {% extends "_base.html" %}
 
 {% block scripts %}
-<script type="module" src="{{ url_for('static', path='/js/base/styled_table.js') }}"></script>
+<script type="module" src="{{ url_for('static', path='/js/mb-button.js') }}"></script>
 {% endblock %}
 
 {% block header %}
@@ -11,6 +11,8 @@
 
 {% block main %}
 <main>
-    Hallo
+    <mb-button>
+        Hallo
+    </mb-button>
 </main>
 {% endblock %}
